plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.lukegjpotter.tools'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.jsoup:jsoup:1.18.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	// Google Sheets API Dependencies.
	implementation 'com.google.api-client:google-api-client:2.6.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
	implementation 'com.google.apis:google-api-services-sheets:v4-rev20240708-2.0.0'

	// Place the RestAssured dependencies above the SpringBoot Test, so the correct Matchers are used.
	testImplementation 'io.rest-assured:rest-assured:5.4.0'
	testImplementation 'io.rest-assured:json-schema-validator:5.4.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Remove the *-plain.jar file from being created.
jar {
    enabled = false
}
